# temp

./: AUTHORS  HOWTO  Makefile  Makefile.in  README.md  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  kernel.core.uarm  kernel.stab.uarm  run.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
include/: stdint.h
src/: Makefile  Makefile.am  Makefile.in  kernel  mikabooq.c
src/.deps/: mikabooq.Po  p1test.Po
